--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-29  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2008-08-29  Rajesh Ranjan  <rajeshkajha@yahoo.com>
 
 	* mai.po: Added Maithili translation.
