Updated Brazilian Portuguese translation.
svn path=/trunk/; revision=14544

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-30 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Fixes Bug #549897.
+
 2008-08-30  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	 gl.po: Updated Galician translation
