Modify "Behavior" category on "Behavior" tab: Use 12 pixels of vertical
2008-08-31  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-file-management-properties.glade:
	Modify "Behavior" category on "Behavior" tab: Use 12 pixels of
	vertical padding between click and window preferences. Fixes #158802.

svn path=/trunk/; revision=14548

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-08-31  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-file-management-properties.glade:
+	Modify "Behavior" category on "Behavior" tab: Use 12 pixels of
+	vertical padding between click and window preferences. Fixes #158802.
+
+2008-08-31  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-names.h:
 	* src/file-manager/fm-directory-view.c (real_update_location_menu),
 	(real_update_menus):
