--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-31  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c: (key_press_event):
+	Don't leak a GdkEvent.
+	Thanks to Huang Peng (#548448).
+
 2008-08-31  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-file-management-properties.glade:
