--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
+	* src/file-manager/fm-directory-view.c (done_loading):
+	Only report that loading is complete and schedule selection 
+	if all files are seen. Fixes #421759.
+
 2008-08-31  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c: (key_press_event):
