--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-31  Seán de Búrca  <sdeburca@svn.gnome.org>
+
+	* ga.po: Updated Irish translation.
+
 2008-08-30 Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR.po: Fixes Bug #549897.
