Updated German translation.
2008-09-01  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

svn path=/trunk/; revision=14552

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-01  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2008-08-31  Seán de Búrca  <sdeburca@svn.gnome.org>
 
 	* ga.po: Updated Irish translation.
