Updated German translation.
2008-09-01  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

svn path=/trunk/; revision=14553

--- a/po/de.po
+++ b/po/de.po
@@ -40,7 +40,7 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-01 07:51+0200\n"
-"PO-Revision-Date: 2008-09-01 09:04+0200\n"
+"PO-Revision-Date: 2008-09-01 09:07+0200\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -574,7 +574,7 @@ msgid ""
 "current tab. If set to \"end\", then new tabs are appended to the end of the "
 "tab list."
 msgstr ""
-"Wenn dieser Wert »after_current_tab« ist, werden neue Reiter nach dem "
+"Falls dieser Schlüssel »after_current_tab« ist, werden neue Reiter nach dem "
 "momentan gewählten Reiter eingefügt. Ist dieser Wert »end«, werden neue "
 "Reiter am Ende der Reiterliste eingefügt."
 
