--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Require eel 2.23.91.
+
+	* libnautilus-private/nautilus-icon-info.c
+	(nautilus_icon_info_lookup):
+	Use eel_gdk_pixbuf_load_from_stream_at_size() for loading SVG icons at
+	the desired size. Fixes #529371.
+
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-directory-view.c (done_loading):
 	Only report that loading is complete and schedule selection 
 	if all files are seen. Fixes #421759.
