--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-application.c (volume_added_callback):
+	Make autorun work for blank CDs. Fixes #548221. Thanks to Jerry Yu
+	<jijun.yu@sun.com>.
+
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-file-operations.c
 	(confirm_empty_trash), (prompt_empty_trash):
 	Use "Empty Trash" buttons in empty trash dialogs. Fixes #524020.
