Update with latest changes from Totem, we can preview midi, XM, speex and
2008-09-01  Bastien Nocera  <hadess@hadess.net>

	* src/file-manager/nautilus-audio-mime-types.h: Update with
	latest changes from Totem, we can preview midi, XM, speex
	and FLAC files


svn path=/trunk/; revision=14559

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-01  Bastien Nocera  <hadess@hadess.net>
+
+	* src/file-manager/nautilus-audio-mime-types.h: Update with
+	latest changes from Totem, we can preview midi, XM, speex
+	and FLAC files
+
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-icon-container.c
