--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c (key_press_event):
+	Reset event window before freeing event.
+
 2008-09-01  Bastien Nocera  <hadess@hadess.net>
 
 	* src/file-manager/nautilus-audio-mime-types.h: Update with
