Fix RTL scroll region calculation.
2008-09-01  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-container.c
	(nautilus_icon_container_update_scroll_region):
	Fix RTL scroll region calculation.

svn path=/trunk/; revision=14562

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-icon-container.c
+	(nautilus_icon_container_update_scroll_region):
+	Fix RTL scroll region calculation.
+
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c (key_press_event):
 	Reset event window before freeing event.
 
