--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-01  Gil Forcada <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation by Joan Duran.
+
 2008-09-01  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
