--- a/po/ca.po
+++ b/po/ca.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-01 20:24+0200\n"
-"PO-Revision-Date: 2008-08-28 19:04+0100\n"
+"PO-Revision-Date: 2008-09-01 20:29+0200\n"
 "Last-Translator: Joan Duran <jodufi@gmail.com>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -1938,9 +1938,8 @@ msgstr ""
 "sempre."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2074
-#, fuzzy
 msgid "Do _not Empty Trash"
-msgstr "No buidis la paperera"
+msgstr "_No buidis la paperera"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2173
 #, c-format
