--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c
 	(nautilus_icon_container_update_scroll_region),
 	(nautilus_icon_container_get_first_visible_icon),
