post-release bump to 2.23.92.
2008-09-01  Christian Neumair  <cneumair@gnome.org>

	* configure.in: post-release bump to 2.23.92.

=== nautilus 2.23.91 ===

svn path=/trunk/; revision=14571

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in: post-release bump to 2.23.92.
+
+=== nautilus 2.23.91 ===
+
+2008-09-01  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
