--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	 gl.po: Updated Galician translation
+
 2008-09-01  Gil Forcada <gforcada@gnome.org>
 
 	* ca.po: Updated Catalan translation by Joan Duran.
