--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-02  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2008-09-01  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
