Updated Brazilian Portuguese translation.
svn path=/trunk/; revision=14577

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-02 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by Og Maciel.
+
 2008-09-02  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
 	* vi.po: Updated Vietnamese translation
