Remove scary secondary dialog message. Fixes #550567. Also remove easter
2008-09-03  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window-menus.c
	(forget_history_if_confirmed):
	Remove scary secondary dialog message. Fixes #550567.
	Also remove easter egg, which isn't translatable.

svn path=/trunk/; revision=14578

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-09-03  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-navigation-window-menus.c
+	(forget_history_if_confirmed):
+	Remove scary secondary dialog message. Fixes #550567.
+	Also remove easter egg, which isn't translatable.
+
 2008-09-01  Christian Neumair  <cneumair@gnome.org>
 
 	* configure.in: post-release bump to 2.23.92.
