include some documentation, bug #396929.
2008-09-04  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	include some documentation, bug #396929.


svn path=/trunk/; revision=14581

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2008-09-04  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>
+
+	* configure.in:
+	* docs/reference/Makefile.am:
+	* docs/reference/libnautilus-extension/Makefile.am:
+	* docs/reference/libnautilus-extension/libnautilus-extension-docs.x
+	ml:
+	* libnautilus-extension/nautilus-column.c:
+	* libnautilus-extension/nautilus-menu-item.c:
+	* libnautilus-extension/nautilus-property-page.c:
+	(nautilus_property_page_get_type):
+	* libnautilus-extension/nautilus-property-page.h:
+	include some documentation, bug #396929.
+
 2008-09-03  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c (create_job):
