sv.po: Updated Swedish translation
svn path=/trunk/; revision=14582

--- a/po/sv.po
+++ b/po/sv.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-08-28 22:20+0200\n"
-"PO-Revision-Date: 2008-08-28 22:37+0100\n"
+"PO-Revision-Date: 2008-09-04 02:21+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -4286,7 +4286,7 @@ msgstr "Grupp:"
 
 #: ../src/file-manager/fm-properties-window.c:4416
 msgid "Others"
-msgstr "Andra"
+msgstr "Övriga"
 
 #: ../src/file-manager/fm-properties-window.c:4433
 msgid "Execute:"
@@ -4298,7 +4298,7 @@ msgstr "Tillåt _körning av filen som ett program"
 
 #: ../src/file-manager/fm-properties-window.c:4456
 msgid "Others:"
-msgstr "Andra:"
+msgstr "Övriga:"
 
 #: ../src/file-manager/fm-properties-window.c:4604
 msgid "Folder Permissions:"
