--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-04  Robert-André Mauchin  <zebob.m@pengzone.org>
+
+	* po/LINGUAS:
+	* po/ps.po: Added Pashto translations by Zabeeh Khan.
+
 2008-09-04  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>
 
 	* configure.in:
