--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-04  Robert-André Mauchin  <zebob.m@pengzone.org>
+
+	* LINGUAS:
+	* ps.po: Added Pashto translations by Zabeeh Khan.
+
 2008-09-04  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
